2006-03-24  Christian Schaller  <christian@fluendo.com>

	* src/Banshee.MediaEngine/Helix/Makefile.am: small fix to enable
	  'make dist' even when --disable-helix is passed

2006-03-21  James Willcox  <snorp@snorp.net>

	* src/Banshee.Base/Sources/DapSource.cs: when creating the 'syncing'
	widget, do a ShowAll() on it.

2006-03-21  Aaron Bockover  <aaron@abock.org>

	* src/PlayerInterface.cs: Prefer the stream length over the metadata
	length in all situations, provided the stream length is non-zero

	* src/Banshee.Base/PlayerEngineCore.cs: Fixed automatic engine switching
	based on source type, handle any exceptions thrown by active engine
	and reset the engine

	* src/Banshee.MediaEngine/Gstreamer/GstPlayerEngine.cs:
	* src/Banshee.MediaEngine/Helix/HelixRemotePlayerEngine.cs:
	* src/Banshee.Base/MediaEngine/PlayerEngine.cs: make SourceCapabilities
	IEnumerable

	* src/Banshee.MediaEngine/Helix/HelixRemotePlayerEngine.cs: Removed
	http as a supported source capability as HTTP under Helix is broken

2006-03-20  Aaron Bockover  <aaron@abock.org>

	* libbanshee/gst-cd-rip-0.10.c: If vorbisenc is chosen as the encoder
	for ripping and an oggmux is not in the pipeline profile, attempt to
	insert an oggmux element (BGO #335211)

2006-03-20  Aaron Bockover  <aaron@abock.org>

	* NEWS: Updated with 0.10.9 release notes

	* configure.ac: Bumped to 0.10.9

	* libbanshee/gst-misc-0.10.c: disabled typefinding with gstreamer 0.10
	as it's a little buggy; will fall back on gnome vfs for now

	* src/PlayerInterface.cs: Do not switch sources if a source eject fails

	* src/Banshee.Base/AudioCd/AudioCdDisk.cs: Do not allow ejecting if
	we are ripping the CD
	
	* src/Banshee.Base/Sources/AudioCdSource.cs: Propagate the return of
	the disk eject

2006-03-20  Sebastian Dröge  <slomo@ubuntu.com>

	* src/MusicBrainz/Client.cs: Reverted a small part of Michael
	Hutchinson's proxy patch in GetIDFromUrl() to fix a bug in parsing